Modificacion de Usuario y Equipo, con los test cambiadods